--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -161,6 +161,19 @@ input[type=number]::-webkit-outer-spin-button {
 .play-again .actions .test 								{ display:inline-block; width:203px; height:279px; background: url(../img/bubble_test.png) no-repeat; background-size: 203px 203px;z-index:5;position:relative; top:0px;left:-70px;padding-top: 203px;}
 .play-again .actions span 								{font-family: 'avenirregular'; font-size: 26px; line-height: 38px; }
 
+.app-root.game                              { background-color: #11325F; color:#fff; position:relative;height:768px;}
+.app-root.game canvas                       { width:1024px; height:768px; position:absolute; top:0px; left:0px; z-index:20;}
+.app-root.game .words                       { display:inline-block; width:100% ;height: 240px; padding-left:220px;}
+.app-root.game .words .word-card            { position:relative; float:left; width:223px; height:209px; margin-left: 30px;}
+.app-root.game .words .word-card .word-bg   { display:inline-block; width:223px; height:209px; position:absolute; top:0px; left: 0px;}
+.app-root.game .words .word-card .word      { display:inline-block; width:130px; height:130px; position:absolute; top:34px; left: 46px;}    
+.app-root.game .text                        { display:inline-block; width:100%; font-family: 'kulturistalight'; font-size: 50px; width:100%; text-align:center; margin: 30px auto 0px auto; line-height: 70px;}
+.app-root.game .sub-text                    { display:inline-block; width:100%; font-family: 'avenirregular'; font-size: 28px; width:100%; text-align:center; margin: 0; line-height: 40px;}
+.app-root.game .videos                      { display:inline-block; width:100% ;height: 209px; margin:0px;position:absolute; left:0px; bottom:70px; padding-left: 220px;z-index:0;}
+.app-root.game .videos .video-card          { position:relative; float:left; width:223px; height:209px; margin-left: 30px;z-index:0;}
+.app-root.game .videos .video-card video    { display:inline-block; width:209px; height:209px; position:absolute; top:0px; left: 0px;z-index:15;}
+.app-root.game .videos .video-card .mask    { display:inline-block; width:209px; height:209px; position:absolute; top:0px; left: 0px;z-index:25;}
+  
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
