--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,7 @@
         <div class="page-bold">
           Mom or dad, please sign up through Facebook, <br>and your child will be exploring the world momentarily!
         </div>
-        <div class="button fb-button" ng-click="facebookLogin()"></div>
+        <div class="button fb-button" ></div>
         <div class="page-msg">
           <!--This is a security measure...<br>
           Don't worry, ananas won't post anything on your behalf! -->
