--- a/platforms/ios/www/css/ionic.app.css
+++ b/platforms/ios/www/css/ionic.app.css
@@ -92,6 +92,58 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   text-align: center;
   position: relative; }
 
+::-webkit-input-placeholder {
+  color: #9B9B9B; }
+
+:-moz-placeholder {
+  color: #9B9B9B;
+  opacity: 1; }
+
+::-moz-placeholder {
+  color: #9B9B9B;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  color: #9B9B9B; }
+
+/* menu */
+.menu.menu-left {
+  display: inline-block;
+  background: url(../img/menu_bg.png) repeat-y;
+  position: relative; }
+
+.menu.menu-left .list .item {
+  display: inline-block;
+  background: url(../img/menu_bg.png) repeat-y;
+  width: 275px;
+  margin: 0;
+  border: 0;
+  font-family: Avenir-Black;
+  font-size: 25px;
+  color: #000;
+  line-height: 30px;
+  text-align: center; }
+
+.menu.menu-left .list .item.menu-line {
+  width: 175px;
+  height: 2px;
+  margin: 0px 50px 5px 50px;
+  padding: 0;
+  border-bottom: 2px solid; }
+
+.menu.menu-left .list .item:first-of-type {
+  margin-top: 30px; }
+
+.menu.menu-left .list .item:last-of-type {
+  position: fixed;
+  top: 650px;
+  left: 0; }
+
+/* buttons */
+.btn_continue {
+  background: url(../img/button_continue.png) no-repeat;
+  background-size: 232px 71px; }
+
 /* app start */
 .app-root {
   display: inline-block;
@@ -100,6 +152,22 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   min-height: 724px;
   text-align: center; }
 
+.app-root .menu-icon {
+  display: inline-block;
+  position: absolute;
+  top: 18px;
+  left: 18px;
+  width: 26px;
+  height: 24px; }
+
+.app-root .menu-icon.white {
+  background: url(../img/menu_white.png) no-repeat;
+  background-size: 26px 24px; }
+
+.app-root .menu-icon.black {
+  background: url(../img/menu_black.png) no-repeat;
+  background-size: 26px 24px; }
+
 /* welcome screen */
 .app-root.welcome {
   background: url('../img/splash screen.png') no-repeat;
@@ -107,15 +175,81 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 
 /* login screen */
 .app-root.login {
-  background-color: #A5F2FA; }
+  background-color: #A5F2FA;
+  width: 1024px;
+  height: 768px; }
+
+.app-root.login .login-bg {
+  display: inline-block;
+  width: 1024px;
+  height: 768px;
+  background: url(../img/parent_signup_bg.png) no-repeat;
+  background-size: 1024px 768px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0; }
+
+.app-root.login .parent-form {
+  display: inline-block;
+  width: 524px;
+  position: fixed;
+  top: 345px;
+  left: 262px; }
+
+.app-root.login .parent-form .continue {
+  width: 232px;
+  height: 71px; }
+
+.app-root.login .parent-form .form-field {
+  display: inline-block;
+  width: 524px;
+  height: 54;
+  margin-bottom: 10px; }
+
+.app-root.login .parent-form .form-field input {
+  font-family: 'avenirlight';
+  font-size: 20px;
+  color: #000;
+  line-height: 28px;
+  padding: 20px; }
+
+.app-root.login .parent-form .form-errors {
+  display: inline-block;
+  width: 250px;
+  position: absolute;
+  top: 0px;
+  left: 512px;
+  background-color: #F9525C; }
+
+.app-root.login .parent-form .form-errors span {
+  display: inline-block;
+  width: 250px;
+  height: auto;
+  min-height: 40px;
+  background-color: #F9525C;
+  font-family: 'avenirregular';
+  font-size: 20px;
+  color: #fff;
+  padding: 10px 0 0 10px; }
+
+.app-root.login .parent-form .sub-text {
+  font-family: Avenir-Light;
+  font-size: 20px;
+  color: #000;
+  line-height: 28px;
+  margin-top: 50px; }
 
 .app-root.login .page-title {
+  position: relative;
   font-family: 'kulturistalight';
   font-size: 60px;
   width: 100%;
-  margin-top: 150px; }
+  margin-top: 120px;
+  z-index: 1; }
 
 .app-root.login .page-bold {
+  position: relative;
   font-family: 'avenirregular';
   font-size: 30px;
   width: 100%;
@@ -140,7 +274,19 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   display: block;
   width: 232px;
   height: 71px;
-  margin: 40px auto 0 auto; }
+  margin: 40px auto 0 auto;
+  z-index: 1;
+  position: relative; }
+
+.app-root.login .gotit {
+  background: url(../img/button_gotit.png) no-repeat;
+  background-size: cover;
+  display: block;
+  width: 232px;
+  height: 71px;
+  margin: 180px auto 0 auto;
+  z-index: 1;
+  position: relative; }
 
 .app-root.login .page-msg {
   margin: 60px auto 0 auto;
@@ -158,6 +304,9 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   font-family: 'kulturistalight';
   font-size: 60px;
   line-height: 60px; }
+
+.app-root.login .signed-in-existing .page-bold:last-of-type {
+  margin-top: 15px; }
 
 .app-root.login .signed-in-existing .children {
   display: inline-block;
@@ -310,7 +459,9 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   float: left;
   background: url(../img/camera_icon.png) no-repeat;
   background-size: cover;
-  border: 0px; }
+  border: 0px;
+  position: relative;
+  z-index: 5; }
 
 .app-root.add-child .child-form .form-field .lets-go {
   display: block;
@@ -325,22 +476,36 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 .app-root.add-child .child-form .form-field .continue {
   width: 100%; }
 
+.app-root.add-child #camera {
+  position: absolute;
+  top: 234px;
+  left: 362px;
+  width: 400px;
+  height: 400px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px; }
+
 /* learning screen */
-.app-root.learning .menu-icon {
+.app-root .menu-icon {
   display: inline-block;
   position: absolute;
-  top: 18px;
-  left: 18px;
+  top: 17px;
+  left: 17px;
   width: 26px;
   height: 24px;
   background: url(../img/menu_white.png) no-repeat;
-  background-size: 26px 24px; }
+  background-size: 26px 24px;
+  z-index: 500; }
 
 .app-root.learning .globe {
   width: 100%;
   height: 100%;
-  background: url('../img/globe.gif') no-repeat;
-  background-size: cover;
+  background-color: #a5f2fa; }
+
+.app-root.learning .globe img {
+  width: 100%;
+  height: 100%;
   position: relative;
   z-index: 100; }
 
@@ -357,17 +522,17 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 
 .app-root.learning .match .pic {
   display: inline-block;
-  width: 300px;
+  width: 320px;
   margin: 110px auto 0 auto;
   border: 0px;
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
-  border-radius: 150px; }
+  -webkit-border-radius: 160px;
+  -moz-border-radius: 160px;
+  border-radius: 160px; }
 
 .app-root.learning .match .flag {
   position: absolute;
   display: inline-block;
-  top: 50%;
+  top: 400px;
   left: 37%; }
 
 .app-root.learning .match .ananas_a {
@@ -400,7 +565,9 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   display: inline-block;
   width: 100%;
   height: 60px;
-  background-color: #0F244D; }
+  background-color: #0F244D;
+  position: relative;
+  z-index: 80; }
 
 .app-root.learning .playing .counter .dots {
   display: inline-block;
@@ -409,7 +576,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   background: url(../img/5_row.png) no-repeat;
   background-size: 173px 279px;
   margin-top: 5px;
-  z-index: 25;
+  z-index: 45;
   position: relative; }
 
 .app-root.learning .playing .me {
@@ -420,20 +587,20 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 
 .app-root.learning .playing .pic {
   display: inline-block;
-  width: 300px;
-  height: 300px;
-  margin: 242px auto 0 auto;
+  width: 400px;
+  height: 400px;
+  margin: 200px 56px 0 56px;
   border: 0px;
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
-  border-radius: 150px; }
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px; }
 
 .app-root.learning .playing .info {
   position: absolute;
   display: inline-block;
   width: 270px;
-  top: 4%;
-  left: 7%;
+  top: 34px;
+  left: 40px;
   font-family: Avenir-Black;
   font-size: 25px;
   color: #000;
@@ -441,7 +608,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   line-height: 33px; }
 
 .app-root.learning .playing .info.right {
-  left: 40%;
+  left: 472px;
   text-align: right; }
 
 .app-root.learning .playing .info .flag {
@@ -461,23 +628,35 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   text-align: center;
   width: 100%; }
 
+.app-root.learning .playing .turn .countdown {
+  display: inline-block;
+  width: 335px;
+  height: 314px;
+  position: absolute;
+  left: 345px;
+  top: 120px;
+  z-index: 50;
+  text-align: center;
+  font-family: 'kulturistalight';
+  font-size: 0px; }
+
 .app-root.learning .playing .turn .word-bg {
   display: inline-block;
   width: 335px;
   height: 314px;
   position: absolute;
   left: 345px;
-  z-index: 20;
-  top: 6px; }
+  z-index: 40;
+  top: 5px; }
 
 .app-root.learning .playing .turn .word {
   display: inline-block;
-  width: 195px;
-  height: 196px;
+  width: 318px;
+  height: 329px;
   position: absolute;
-  left: 413px;
-  top: 40px;
-  z-index: 20; }
+  left: 354px;
+  top: -25px;
+  z-index: 50; }
 
 .app-root.learning .playing .turn .mic {
   display: inline-block;
@@ -486,7 +665,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   position: absolute;
   left: 310px;
   top: 512px;
-  z-index: 30; }
+  z-index: 20; }
 
 .app-root.learning .playing .turn .me {
   position: relative;
@@ -497,97 +676,149 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   left: 0px;
   top: 200px;
   display: inline-block;
-  width: 512px;
-  height: 300px;
-  z-index: 0; }
+  width: 683px;
+  height: 400px;
+  z-index: 10; }
+
+.app-root.learning .playing .turn .me #camera {
+  position: absolute;
+  top: 186px;
+  left: 56px;
+  width: 400px;
+  height: 400px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
+  z-index: 10; }
 
 .app-root.learning .playing .turn .me .repeat-that {
   position: absolute;
-  left: 30px;
-  top: 552px;
+  left: 10px;
+  top: 504px;
   display: inline-block;
-  width: 206px;
-  height: 142px;
-  z-index: 10; }
+  width: 275px;
+  height: 190px;
+  z-index: 20; }
 
 .app-root.learning .playing .turn .me .your-turn {
   position: absolute;
   left: 0px;
   top: 200px;
   display: inline-block;
-  width: 135px;
-  height: 162px;
-  z-index: 10; }
+  width: 182px;
+  height: 219px;
+  z-index: 20; }
+
+.app-root.learning .playing .turn .me .screen {
+  position: absolute;
+  left: 0;
+  top: -15px;
+  display: block;
+  width: 512px;
+  height: 768px;
+  opacity: 0.8;
+  background-color: #A5F2FA;
+  z-index: 30; }
 
 .app-root.learning .playing .turn .feedback .message {
   position: absolute;
   left: 0px;
-  top: 202px;
+  top: 200px;
   display: inline-block;
-  width: 135px;
-  height: 162px;
-  z-index: 10; }
+  width: 182px;
+  height: 219px;
+  z-index: 30; }
 
 .app-root.learning .playing .turn .feedback .points {
   position: absolute;
-  left: 50px;
-  top: 502px;
+  left: 40px;
+  top: 462px;
   display: inline-block;
-  width: 120px;
-  height: 120px;
-  z-index: 10; }
+  width: 162px;
+  height: 162px;
+  z-index: 20; }
 
 .app-root.learning .playing .turn .feedback .stars {
   position: absolute;
   left: 0px;
   top: 0px;
   width: 1024px;
-  height: 670px;
-  z-index: 500; }
+  height: 674px;
+  z-index: 50; }
 
 .app-root.learning .playing .turn .friend .vid-container {
   position: absolute;
-  left: 50px;
-  top: 228px;
+  left: 0px;
+  top: 186px;
   display: inline-block;
-  width: 512px;
-  height: 300px;
+  width: 683px;
+  height: 400px;
   background: url(../img/hole_small_red.png) no-repeat cover;
   z-index: 10; }
 
 .app-root.learning .playing .turn .friend video {
   position: absolute;
-  left: -62px;
-  z-index: -5; }
+  left: -100px;
+  z-index: 10; }
 
 .app-root.learning .playing .turn .friend .video-mask {
   position: absolute;
-  left: 10px;
-  height: 300px;
+  left: 0px;
+  height: 400px;
+  z-index: 20; }
+
+.app-root.learning .playing .turn .friend .play-again {
+  display: inline-block;
+  width: 338px;
+  height: 164px;
+  position: absolute;
+  left: 310px;
+  top: 500px;
+  background: url(../img/bubble_repeat.png) no-repeat;
+  background-size: 169px 162px;
+  z-index: 20; }
+
+.app-root.learning .playing .turn .friend .screen {
+  position: absolute;
+  left: 0;
+  top: -15px;
+  display: block;
+  width: 512px;
+  height: 718px;
+  opacity: 0.8;
+  background-color: #A5F2FA;
   z-index: 30; }
 
 .play-again {
-  display: inline-block;
+  display: block;
   width: 1024px;
   height: 768px;
-  background-color: #a5f2fa; }
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0; }
 
 .play-again .text {
   font-family: 'kulturistalight';
   font-size: 60px;
   width: 100%;
   text-align: center;
-  margin: 100px auto 50px auto;
-  line-height: 70px; }
+  margin-bottom: 50px;
+  line-height: 70px;
+  position: relative;
+  top: 100px; }
 
 .play-again .actions {
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  top: 100px; }
 
 .play-again .actions .globe {
   display: inline-block;
   width: 203px;
   height: 279px;
+  opacity: 1;
   background: url(../img/bubble_back_to_globe.png) no-repeat;
   background-size: 203px 203px;
   z-index: 5;
@@ -600,6 +831,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   display: inline-block;
   width: 330px;
   height: 330px;
+  opacity: 1;
   background: url(../img/bubble_play_again.png) no-repeat;
   background-size: 330px 330px;
   position: relative;
@@ -609,6 +841,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   display: inline-block;
   width: 203px;
   height: 279px;
+  opacity: 1;
   background: url(../img/bubble_test.png) no-repeat;
   background-size: 203px 203px;
   z-index: 5;
@@ -721,6 +954,15 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   top: 0px;
   left: 0px;
   z-index: 25; }
+
+.app-root.game .teaching {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  display: inline-block;
+  width: 1024px;
+  height: 768px;
+  z-index: 100; }
 
 /*!
   Ionicons, v1.5.2
@@ -7729,4 +7971,19 @@ a.button {
   left: 0;
   right: 0;
   width: 100%;
-  opacity: 0.9; }
+  background: rgba(165, 242, 250, 0.88); }
+
+.animate-show {
+  line-height: 60px;
+  opacity: 1;
+  padding: 10px; }
+
+.animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove.ng-hide-remove-active {
+  transition-property: top, font-size;
+  transition-duration: 0.8s, 1s, 0.5s, 0.5s;
+  transition-delay: 0.2s, 0.5s, 1s, 1.5s; }
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px; }
